--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - pip-cache:/home/developer/.cache/pip
       # Optional: mount a directory for database storage
       - electrumx-db:/var/lib/electrumx
+    env_file:
+      - .env
     environment:
       - PIP_BREAK_SYSTEM_PACKAGES=1
       - PYTHONUNBUFFERED=1
