add BitcoinBlu extension

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@
 # The .env file is gitignored and will not be committed
 
 # REQUIRED: Coin name (e.g., Bitcoin, BitcoinTestnet, Litecoin)
-COIN=Bitcoin
+COIN=BitcoinBlu
 
 # REQUIRED: Network (mainnet, testnet, regtest, etc.)
-NET=mainnet
+NET=main-blu
 
 # REQUIRED: Database directory path (inside container)
 DB_DIRECTORY=/var/lib/electrumx
@@ -15,7 +15,7 @@ DB_DIRECTORY=/var/lib/electrumx
 # Format: http://username:password@hostname:port/
 # For macOS Docker: use host.docker.internal instead of localhost
 # For Linux Docker: use host IP or 172.17.0.1
-DAEMON_URL=http://rpcuser:rpcpassword@host.docker.internal:8332/
+DAEMON_URL=http://rpcuser:rpcpassword@host.docker.internal:8342/
 
 # Services to offer (comma-separated)
 # tcp://:50001 - Plain TCP on port 50001
