--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       # Optional: mount a directory for database storage
       - electrumx-db:/var/lib/electrumx
     env_file:
-      - .env
+      - .env  # Optional: create from .env.example
     environment:
       - PIP_BREAK_SYSTEM_PACKAGES=1
       - PYTHONUNBUFFERED=1
